--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
     "strict": true,
     "skipLibCheck": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "typeRoots": ["./src/@types", "./node_modules/@types"]
+    
   },
   "include": ["src"]
 }
